--- a/style.css
+++ b/style.css
@@ -96,14 +96,15 @@ section
 {
 	background-color: rgba(28, 85, 57, 0.70);
 	border: 10px solid black;
-    margin-left: 10%;
+	margin-left: 10%;
 	margin-right: 10%;
 }
 
 section > *
 {
-    margin-left: 20%;
-	margin-right: 20%;
+	text-align: center;
+	margin-left: 1%;
+	margin-right: 1%;
 }
 
 a[href]
