--- a/style.css
+++ b/style.css
@@ -134,6 +134,8 @@ a[href]:hover
     width: 60%;
     height: 0;
     padding-bottom: 33.75%;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 .video
