--- a/style.css
+++ b/style.css
@@ -128,6 +128,13 @@ a[href]:hover
     width: 100%;
     height: auto;
 }
+
+.langButton 
+{
+    width: 8%;
+    height: auto;
+}
+
 .videoDiv
 {
     position: relative;
